fix: Changed positioning of button to align to footer icons

--- a/src/components/footer/scrollToTop/ScrollToTop.module.css
+++ b/src/components/footer/scrollToTop/ScrollToTop.module.css
@@ -1,5 +1,5 @@
 .container {
-    --position-offset: 95%;
+    --position-offset: 93.5%;
 
     position: fixed;
 
